kubernetes/configserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configserver-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: configserver
  template:
    metadata:
      labels:
        app: configserver
    spec:
      containers:
      - name: configserver
        image: chrayef/config-server:41
        ports:
        - containerPort: 8888
