kubernetes/discovery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: discovery
  template:
    metadata:
      labels:
        app: discovery
    spec:
      containers:
      - name: discovery
        image: chrayef/discovery-service:41
        ports:
        - containerPort: 8761
