kubernetes/games-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: games-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: games
  template:
    metadata:
      labels:
        app: games
    spec:
      containers:
      - name: games
        image: chrayef/games-service:41
        ports:
        - containerPort: 8070
