kubernetes/library-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: library
  template:
    metadata:
      labels:
        app: library
    spec:
      containers:
      - name: library
        image: chrayef/library-service:41
        ports:
        - containerPort: 8020
