kubernetes/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  ports:
  - protocol: TCP
    port: 4200
    targetPort: 4200
  type: ClusterIP
