kubernetes/configserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: configserver-service
spec:
  selector:
    app: configserver
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
  type: ClusterIP
