kubernetes/discovery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
spec:
  selector:
    app: discovery
  ports:
  - protocol: TCP
    port: 8761
    targetPort: 8761
  type: ClusterIP
