kubernetes/games-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: games-service
spec:
  selector:
    app: games
  ports:
  - protocol: TCP
    port: 8070
    targetPort: 8070
  type: ClusterIP
