kubernetes/library-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-service
spec:
  selector:
    app: library
  ports:
  - protocol: TCP
    port: 8020
    targetPort: 8020
  type: ClusterIP
